# project-veil

./: .gitignore  Cargo.toml  README.md  protocol.md  timeline.md
src/: main.rs
src/client/: api_client.rs  app_state.rs  client.rs  mod.rs  tui.rs  websocket.rs
src/cmd/: cmd.rs
src/protocol/: protocol.rs
src/server/: mod.rs  server.rs  state.rs  websocket.rs
src/server/api/: user.rs
