[package]
name = "project-veil"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = { version= "2.0.1", features = ["static_secrets"]}
aes-gcm = "0.10"
aead = "0.5"
rand_core = "0.6.4"
