[package]
name = "project-veil"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.2", features = ["trace"] }
ratatui = { version = "0.29.0", features = ["default"] }
crossterm = "0.28.1"
reqwest = { version = "0.12.12", features = ["json"] }
lazy_static = "1.4"
tokio-stream = "0.1.17"

[features]
server = []
client = []
default = ["server"]